# ibge-pnadc-fetcher

./: .gitignore  Pipfile  README.md  bitbucket-pipelines.yml  download.py  etl.py  fetch-doc.py  fetch.py  ibge_pnadc_fetcher.py  pnadcpy.py  pyproject.toml  requirements.txt  setup.py  unzip.py
configs/: configs.json
pnadcpy/: __init__.py  download.py  read_dicio.py
src/ibge_pnadc_fetcher/: fetcher.py  storage.py
