[tool.poetry]
name = "ibge-pnadc-fetcher"
version = "0.2.1"
description = "Script to download PNADC's microdata files"
authors = ["Daniel Komesu <danielkomesu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ibge_pnadc_fetcher.py"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
