[project]
name = "ibge-pnadc-fetcher"
version = "0.2.2"
description = "Script to download IBGE's PNADC microdata files"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = [
    "data",
    "open data",
    "data collection",
    "microdata",
    "IBGE",
    "survey",
    "research",
]
authors = [
    {name = "Daniel Komesu", email = "daniel@dkko.me"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Archiving",
]

dependencies = [
    "tqdm",
]

[project.urls]
Documentation = "https://github.com/dankkom/ibge-pnadc-fetcher#readme"
Issues = "https://github.com/dankkom/ibge-pnadc-fetcher/issues"
Source = "https://github.com/dankkom/ibge-pnadc-fetcher"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
